--- a/tests/sample_data/groceries.html
+++ b/tests/sample_data/groceries.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Grocery List</h1>
         <ul>
-        <li>Apples</li>
+        <li aria-label="Apples (42)">Apples</li>
         <li>Bananas</li>
         <li>Carrots</li>
         <li>Donuts</li>
