--- a/tests/sample_data/profile.html
+++ b/tests/sample_data/profile.html
@@ -5,7 +5,7 @@
     <title>Fetch Example</title>
     <script>
         window.onload = function () {
-            fetch('https://jsonplaceholder.typicode.com/todos/1')
+            fetch('https://cdpdriver.github.io/examples/user-data.json')
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById('result').textContent = JSON.stringify(data, null, 2);
